# markdown-blog-sveltekit-actix

./: .dockerignore  README.md  docker-compose-dev.yml  docker-compose.yml  init.copy.sql  init.sql
.github/workflows/: dockercompile.yaml
admin_panel/: .gitignore  Cargo.toml  TestMarkdown.md  TestMarkdown.md_new  _new
admin_panel/src/: data.rs  main.rs  webconnector.rs
backend/: Cargo.toml  Dockerfile  Dockerfile.dev  TestData.sql
backend/src/: database.rs  main.rs  media.rs  posts.rs  projects.rs  uploads.rs
frontend/: .dockerignore  .env  Dockerfile  Dockerfile.dev  package-lock.json  package.json  svelte.config.js  tailwind.config.js
frontend/src/: app.css
frontend/src/lib/: About.svelte  ArticleSnippet.svelte  ArticlesListView.svelte  Button.svelte  ButtonDefault.svelte  ButtonRow.svelte  Constants.svelte  FilterWidget.svelte  PostsListView.svelte  PostsSnippet.svelte  ProjectOverview.svelte  ProjectsOverview.svelte  store.js
frontend/src/routes/: +page.svelte
frontend/src/routes/posts/[slug]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/projects/[slug]/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
frontend/static/: theme.json
frontend/static/configs/: theme.json
shared/: Cargo.toml
shared/src/: lib.rs
