[package]
name = "admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.23.0"
egui_extras = { version = "0.23.0",features = ["image"] }
egui_file = "0.11.0"
egui_commonmark = "0.9.0"
env_logger = "0.10"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
