[package]
name = "md_admin_panel"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
base64 = "0.22"
eframe = "0.29.0"
egui_extras = { version = "0.29.0",features = ["image"] }
egui_file = "0.19.0"
egui_commonmark = "0.18.0"
env_logger = "0.11"
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["serde","v4"] }

[[bin]]
name = "md_admin_panel"
path = "src/main.rs"
