[package]
name = "markdown-blog-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-cors = "0.6.4"
actix-web = "4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
postgres = "0.19.5"
serde = { version ="1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"

