[package]
name = "md_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared = { path = "../shared" }
actix-cors = "0.6.4"
actix-files = "0.6.2"
actix-web = "4"
bb8 = "0.8.1"
bb8-postgres = "0.8.1"
postgres = { version = "0.19.5", features = ["with-uuid-1","with-chrono-0_4"] }
uuid = { version = "1", features = ["serde","v4"] }
serde = { version ="1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
rand = "0.8.5"
regex = "1"
nanoid = "0.4.0"
lazy_static = "1.4"
base64 = "0.22"
chrono = "0.4"

[[bin]]
name = "md_backend"
path = "src/main.rs"
